// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`layouts Playground snapshots contain buttons with text in desktop 1`] = `
<div
  class="MuiButtonGroup-root WhitePlayground-buttons MuiButtonGroup-fullWidth"
  role="group"
>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined WhitePlayground-subButton MuiButton-fullWidth"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
      <p
        class="MuiTypography-root WhitePlayground-subText WhitePlayground-subText MuiTypography-body1"
      >
        clear
      </p>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined WhitePlayground-subButton MuiButton-fullWidth"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M 15 3.75 H 6 c -0.825 0 -1.5 0.675 -1.5 1.5 v 10.5 h 1.5 V 5.25 h 9 V 3.75 z m 2.25 3 H 9 c -0.825 0 -1.5 0.675 -1.5 1.5 v 10.5 c 0 0.825 0.675 1.5 1.5 1.5 h 8.25 c 0.825 0 1.5 -0.675 1.5 -1.5 V 8.25 c 0 -0.825 -0.675 -1.5 -1.5 -1.5 z m 0 12 H 9 V 8.25 h 8.25 v 10.5 z"
        />
      </svg>
      <p
        class="MuiTypography-root WhitePlayground-subText WhitePlayground-subText MuiTypography-body1"
      >
        copy
      </p>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined WhitePlayground-mainButton MuiButton-fullWidth"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M8 5v14l11-7z"
        />
      </svg>
      <p
        class="MuiTypography-root WhitePlayground-mainText WhitePlayground-mainText MuiTypography-body1"
      >
        execute
      </p>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`layouts Playground snapshots contain buttons without text in mobile 1`] = `
<div
  class="MuiButtonGroup-root WhitePlayground-buttons MuiButtonGroup-fullWidth"
  role="group"
>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined WhitePlayground-subButton MuiButton-fullWidth"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined WhitePlayground-subButton MuiButton-fullWidth"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M 15 3.75 H 6 c -0.825 0 -1.5 0.675 -1.5 1.5 v 10.5 h 1.5 V 5.25 h 9 V 3.75 z m 2.25 3 H 9 c -0.825 0 -1.5 0.675 -1.5 1.5 v 10.5 c 0 0.825 0.675 1.5 1.5 1.5 h 8.25 c 0.825 0 1.5 -0.675 1.5 -1.5 V 8.25 c 0 -0.825 -0.675 -1.5 -1.5 -1.5 z m 0 12 H 9 V 8.25 h 8.25 v 10.5 z"
        />
      </svg>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined WhitePlayground-mainButton MuiButton-fullWidth"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M8 5v14l11-7z"
        />
      </svg>
      <p
        class="MuiTypography-root WhitePlayground-mainText WhitePlayground-mainText MuiTypography-body1"
      >
        execute
      </p>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`layouts Playground snapshots contain initial content in dark mode 1`] = `
HTMLCollection [
  <div
    class="cm-activeLine cm-line"
  >
    <span
      class="ͼq"
    >
      console
    </span>
    <span
      class="ͼv"
    >
      .
    </span>
    <span
      class="ͼq"
    >
      log
    </span>
    (
    <span
      class="ͼ13"
    >
      'hello world'
    </span>
    )
  </div>,
  <div
    class="cm-activeLine cm-line"
  >
    <br />
  </div>,
]
`;

exports[`layouts Playground snapshots contain initial content in desktop 1`] = `
HTMLCollection [
  <div
    class="cm-activeLine cm-line"
  >
    console.log(
    <span
      class="ͼe"
    >
      'hello world'
    </span>
    )
  </div>,
  <div
    class="cm-activeLine cm-line"
  >
    <br />
  </div>,
]
`;

exports[`layouts Playground snapshots contain initial content in light mode 1`] = `
HTMLCollection [
  <div
    class="cm-activeLine cm-line"
  >
    console.log(
    <span
      class="ͼe"
    >
      'hello world'
    </span>
    )
  </div>,
  <div
    class="cm-activeLine cm-line"
  >
    <br />
  </div>,
]
`;

exports[`layouts Playground snapshots contain initial content in mobile 1`] = `
HTMLCollection [
  <div
    class="cm-activeLine cm-line"
  >
    console.log(
    <span
      class="ͼe"
    >
      'hello world'
    </span>
    )
  </div>,
  <div
    class="cm-activeLine cm-line"
  >
    <br />
  </div>,
]
`;

exports[`layouts Playground userEvent clear content when click clear button 1`] = `
HTMLCollection [
  <div
    class="cm-activeLine cm-line"
  >
    <br />
  </div>,
  <div
    class="cm-activeLine cm-line"
  >
    <br />
  </div>,
]
`;

exports[`layouts Playground userEvent execute the code content when click execute button 1`] = `
HTMLCollection [
  <div
    class="cm-activeLine cm-line"
  >
    console.log(
    <span
      class="ͼe"
    >
      'hello world'
    </span>
    )
  </div>,
  <div
    class="cm-activeLine cm-line"
  >
    01:01:01.001Z ✨ "hello world"
  </div>,
]
`;

exports[`layouts Playground userEvent execute the code with error content 1`] = `
HTMLCollection [
  <div
    class="cm-activeLine cm-line"
  >
    asdf
  </div>,
  <div
    class="cm-activeLine cm-line"
  >
    01:01:01.001Z 💥 ReferenceError: asdf is not defined
  </div>,
]
`;
